# market-data-insights

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/api/routes/: health.py
src/market_data_insights_api/: __init__.py  main.py
src/market_data_insights_api/api/routes/: health.py
src/market_data_insights_api/core/: config.py
src/market_data_insights_api/db/: __init__.py
src/market_data_insights_api/ingestion/: __init__.py
src/market_data_insights_api/models/: __init__.py  asset.py  price.py
tests/: test_config.py  test_health.py  test_models.py
