[project]
name = "market-data-insights-api"
version = "0.1.0"
description = "FastAPI service for market data ingestion and financial insights."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "psycopg[binary]>=3.2.0,<4.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
    "ruff=0.15.20",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_insights_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
